Se ha completado el desarrollo de la parte de la API para los usuarios. En la parte de las cuestiones, esta completada, pero sigue dando error 500. Hay que subsanarlo!!!
